# IRC

./: .gitignore  CMakeLists.txt  LICENSE  compile_commands.json
include/: ClientSession.h  CommandExecutor.h  ConnectionManager.h  IRCResponse.h  IRC_Server.h  MessageParser.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  CommandExecutor.cpp  ConnectionManager.cpp  IRC_Server.cpp  MessageParser.cpp  main.cpp
